Diccionary y Settings fragments creados

--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diezsiete.lscapp.fragment.SettingsFragment">
+    tools:context="com.diezsiete.lscapp.fragment.DictionaryFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="HELLO DICTIONARY FRAGMENT" />
 
 </FrameLayout>
