Dictionary Recycler view funcionando

--- a/app/src/main/res/layout/dictionary_list_item.xml
+++ b/app/src/main/res/layout/dictionary_list_item.xml
@@ -6,9 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical|start"
-    android:fontFamily="monospace"
-    android:textSize="42sp"
-    android:background="@android:drawable/editbox_background"
+    android:textSize="16sp"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
+    android:paddingLeft="5dp"
+    android:background="@drawable/dictionary_item"
     tools:text="#42" />
 
 
