Practicas funcionando parcialmente 2

--- a/app/src/main/res/layout/practice_item_answer.xml
+++ b/app/src/main/res/layout/practice_item_answer.xml
@@ -19,5 +19,4 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
-          android:minHeight="@dimen/min_height_touch_target"
-          android:textAppearance="@style/LSCApp.TextAppearance.ListItem" />
+          android:minHeight="48dp" />
