--- a/app/src/main/res/layout/video_answer.xml
+++ b/app/src/main/res/layout/video_answer.xml
@@ -1,32 +1,14 @@
-<!--
-  ~ Copyright 2015 Google Inc.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fl_video_answer_view"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:padding="5dp"
-    android:textAppearance="@style/LSCApp.TextAppearance.ListItem" >
+    android:padding="5dp">
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/video_answer_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:controller_layout_id="@layout/custom_playback_control"
+        app:controller_layout_id="@layout/exoplayer_custom_playback_control"
         app:use_controller="false">
 
     </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
