--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,10 @@
 
     <dimen name="spacing_nano">2dp</dimen>
     <dimen name="spacing_double">16dp</dimen>
+
+    <dimen name="elevation_header">4dp</dimen>
+
+    <dimen name="min_height_question">144dp</dimen>
+
+    <dimen name="size_fab">56dp</dimen>
 </resources>
