--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -16,10 +16,9 @@
 
 <resources>
     <item name="submitAnswer" type="id" />
-    <item name="absQuizViewContainer" type="id" />
-    <item name="quiz_content" type="id" />
-    <item name="quiz_done" type="id" />
-    <item name="quiz_edit_text_two" type="id" />
+    <item name="absPracticeViewContainer" type="id" />
+    <item name="practice_content" type="id" />
+    <item name="practice_done" type="id" />
     <item name="solved" type="id" />
 
 </resources>
