--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,8 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rv_dictionary"
-        ></android.support.v7.widget.RecyclerView>
+        android:id="@+id/rv_dictionary" />
 
 
     <TextView
@@ -18,13 +18,94 @@
         android:padding="16dp"
         android:text="@string/error_message"
         android:textSize="20sp"
-        android:visibility="invisible" />
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        />
 
     <ProgressBar
         android:id="@+id/pb_loading_indicator"
         android:layout_height="42dp"
         android:layout_width="42dp"
         android:layout_gravity="center"
-        android:visibility="invisible" />
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        />
 
-</FrameLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/dictionary_popup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPopUpBackgroud"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="32dp"
+        tools:context="com.example.android.emojify.MainActivity"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:clipToPadding="false"
+        android:visibility="gone"
+        >
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="6dp"
+
+            app:contentPadding="0dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            >
+            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                android:id="@+id/dictionary_video_view"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                app:controller_layout_id="@layout/exoplayer_custom_playback_control"
+                app:use_controller="false" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/card_view"
+            android:layout_marginTop="27dp"
+            android:layout_centerInParent="true"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="4dp"
+            >
+            <TextView
+                android:id="@+id/tv_popup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="20dp"
+                android:textSize="20sp"
+                android:text="coco" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/dictionary_clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/ic_clear"
+            app:backgroundTint="@android:color/white"
+            app:fabSize="mini"
+            android:elevation="8dp"/>
+
+
+
+    </RelativeLayout>
+
+
+
+</RelativeLayout>
