--- a/app/src/main/res/layout/practice_discover_image.xml
+++ b/app/src/main/res/layout/practice_discover_image.xml
@@ -3,9 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DISCOVER IMAGE GONO"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/grid_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="2.5dp"
+            android:paddingRight="2.5dp"
+            android:paddingTop="10dp" />
 
 </android.support.constraint.ConstraintLayout>
