--- a/app/src/main/res/layout/fragment_level_selection.xml
+++ b/app/src/main/res/layout/fragment_level_selection.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.diezsiete.lscapp.fragment.DictionaryFragment">
 
     <android.support.v7.widget.RecyclerView
@@ -15,7 +16,7 @@
         android:clipToPadding="false"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
-        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:transitionGroup="false"
         app:spanCount="2" tools:ignore="UnusedAttribute" />
 
@@ -26,7 +27,20 @@
         android:padding="16dp"
         android:text="@string/error_message"
         android:textSize="20sp"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:layout_gravity="center"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/error_reload_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/ic_refresh_black"
+        app:backgroundTint="@android:color/white"
+        android:visibility="gone"
+        />
 
     <ProgressBar
         android:id="@+id/pb_loading_indicator"
@@ -34,5 +48,7 @@
         android:layout_width="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
+
+
 
 </FrameLayout>
