--- a/app/src/main/res/layout/fragment_level_selection.xml
+++ b/app/src/main/res/layout/fragment_level_selection.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.diezsiete.lscapp.fragment.DictionaryFragment">
 
     <android.support.v7.widget.RecyclerView
@@ -16,7 +15,7 @@
         android:clipToPadding="false"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layoutManager="android.support.v7.widget.GridLayoutManager"
         android:transitionGroup="false"
         app:spanCount="2" tools:ignore="UnusedAttribute" />
 
@@ -27,20 +26,7 @@
         android:padding="16dp"
         android:text="@string/error_message"
         android:textSize="20sp"
-        android:visibility="invisible"
-        android:layout_gravity="center"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/error_reload_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/ic_refresh_black"
-        app:backgroundTint="@android:color/white"
-        android:visibility="gone"
-        />
+        android:visibility="invisible" />
 
     <ProgressBar
         android:id="@+id/pb_loading_indicator"
@@ -48,7 +34,5 @@
         android:layout_width="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
-
-
 
 </FrameLayout>
