--- a/app/src/main/res/layout/item_level.xml
+++ b/app/src/main/res/layout/item_level.xml
@@ -1,35 +1,22 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
     <data>
         <variable name="level" type="com.diezsiete.lscapp.model.Level" />
     </data>
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/category_item"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="2dp"
-        android:layout_marginBottom="10dp"
-        >
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:tools="http://schemas.android.com/tools"
+                 android:id="@+id/category_item"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:foreground="@drawable/selector_subtle"
+                 tools:ignore="UseCompoundDrawables">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/level_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
+        <TextView
                 android:id="@+id/level_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="@{level.title}"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+                android:text="@{level.name}"
+                android:layout_gravity="bottom"
+                android:padding="@dimen/spacing_double" />
+
+    </FrameLayout>
 </layout>
