--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -14,24 +14,22 @@
   ~ limitations under the License.
   -->
 
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/question_view"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp"
-    android:layout_marginBottom="10dp"
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginLeft="@dimen/spacing_double"
-    android:layout_marginRight="@dimen/spacing_double"
-    >
-    <TextView
-        android:id="@+id/question"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:textSize="20sp"
-        android:gravity="center"
-        />
-</android.support.v7.widget.CardView>
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/question_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?colorPrimary"
+    android:elevation="@dimen/elevation_header"
+    android:gravity="center_vertical"
+
+    android:paddingTop="0dp"
+    android:paddingRight="@dimen/spacing_double"
+    android:paddingBottom="@dimen/spacing_double"
+    android:paddingLeft="@dimen/spacing_double"
+
+    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+    android:textColor="?android:attr/textColorPrimary"
+    tools:ignore="Overdraw,UnusedAttribute,PrivateResource"
+    android:text="question" />
