implementacion de nueva estructura de datos basado en servidor aws y utilización de nuevo componente data

--- a/app/src/main/res/layout/fragment_level_selection.xml
+++ b/app/src/main/res/layout/fragment_level_selection.xml
@@ -15,7 +15,7 @@
         android:clipToPadding="false"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
-        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:transitionGroup="false"
         app:spanCount="2" tools:ignore="UnusedAttribute" />
 
