--- a/app/src/main/res/layout/practice_take_picture.xml
+++ b/app/src/main/res/layout/practice_take_picture.xml
@@ -2,8 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:minHeight="@dimen/min_height_question"
+    android:id="@+id/practice_content"
+    >
 
     <TextureView
         android:id="@+id/texture"
