--- a/app/src/main/res/layout/practice_translate_video.xml
+++ b/app/src/main/res/layout/practice_translate_video.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:minHeight="@dimen/min_height_question"
+    android:id="@+id/practice_content"
+    >
 
 
 
