--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -66,8 +66,8 @@
                 android:id="@+id/dictionary_video_view"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                app:controller_layout_id="@layout/exoplayer_custom_playback_control"
-                app:use_controller="false" />
+                app:controller_layout_id="@layout/signplayer_custom_playback_control"
+                app:use_controller="true" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
