--- a/app/src/main/res/layout/practice_container.xml
+++ b/app/src/main/res/layout/practice_container.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/absPracticeViewContainer"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     >
 
-    <TextView
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/question_view"
+        android:id="@+id/absPracticeViewContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="@dimen/elevation_header"
-        android:gravity="center"
-        android:paddingTop="0dp"
-        android:paddingRight="@dimen/spacing_double"
-        android:paddingBottom="@dimen/spacing_double"
-        android:paddingLeft="@dimen/spacing_double"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textColor="?android:attr/textColorPrimary"
-        tools:ignore="Overdraw,UnusedAttribute,PrivateResource"
-        android:text="question" />
+        android:orientation="vertical"
+        >
 
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/question_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="@dimen/elevation_header"
+            android:gravity="center"
+            android:paddingTop="0dp"
+            android:paddingRight="@dimen/spacing_double"
+            android:paddingBottom="@dimen/spacing_double"
+            android:paddingLeft="@dimen/spacing_double"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:textColor="?android:attr/textColorPrimary"
+            tools:ignore="Overdraw,UnusedAttribute,PrivateResource"
+            android:text="question" />
+    </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/submitAnswer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:src="@drawable/ic_arrow_forward_white"
+        android:layout_alignParentBottom="true"
+        android:padding="@dimen/spacing_double"
+        android:background="@color/colorPrimaryDark"
+        />
 
-
-
-</LinearLayout>
+</RelativeLayout>
