--- a/app/src/main/res/layout/signplayer_custom_playback_control.xml
+++ b/app/src/main/res/layout/signplayer_custom_playback_control.xml
@@ -4,22 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/signplayer_pb"
+        android:layout_height="42dp"
+        android:layout_width="42dp"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        android:layout_centerInParent="true"
+        />
+
     <ImageButton android:id="@id/exo_play"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:background="#79000000"
-        style="@style/ExoMediaButton.Pause"
+        style="@style/ExoMediaButton.Play"
         />
 
-    <ImageButton android:id="@id/exo_pause"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="#78000000"
-        style="@style/ExoMediaButton.Play"
-        android:visibility="gone"
-        />
 
     <com.google.android.exoplayer2.ui.DefaultTimeBar
         android:id="@id/exo_progress"
