--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#008484</color>
+    <color name="colorPrimaryDark">#008484</color>
+    <color name="colorAccent">#F7605D</color>
     <color name="colorPopUpBackgroud">#5a000000</color>
 
     <color name="touch_effect">#9ccc</color>
