--- a/app/src/main/res/layout/item_level.xml
+++ b/app/src/main/res/layout/item_level.xml
@@ -1,36 +1,29 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <variable name="level" type="com.diezsiete.lscapp.data.db.model.Level" />
-    </data>
-    <android.support.v7.widget.CardView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/category_item"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="2dp"
+    android:layout_marginBottom="2dp">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/category_item"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="2dp"
-        android:layout_marginBottom="2dp"
-        >
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/level_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/level_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/level_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
-
-            <TextView
-                android:id="@+id/level_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="@{level.title}"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-</layout>
+            android:gravity="center"
+            android:padding="20dp"
+            android:textSize="20sp" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
