--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="debugYellow">#f1de0c</color>
     <color name="debugGreen">#32f10c</color>
     <color name="debugBlue">#0cf1d6</color>
+
+    <color name="white">#ffffff</color>
+    <color name="black_effective">#2a2a2a</color>
 </resources>
