--- a/app/src/main/res/layout/practice_discover_image.xml
+++ b/app/src/main/res/layout/practice_discover_image.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/grid_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingLeft="2.5dp"
-                    android:paddingRight="2.5dp"
-                    android:paddingTop="10dp"
-                    />
+    <data>
+        <variable
+            name="practice"
+            type="com.diezsiete.lscapp.vo.PracticeWithData" />
+    </data>
 
-        </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/grid_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="2.5dp"
+                android:paddingRight="2.5dp"
+                android:paddingTop="10dp"
+                />
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
