--- a/app/src/main/res/layout/word_selector_token.xml
+++ b/app/src/main/res/layout/word_selector_token.xml
@@ -3,9 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:padding="5dp"
+    android:padding="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"
-    android:background="@color/wordSelectorToken"
+    android:background="@color/word_selector_token"
     />
