--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
 
     <color name="touch_effect">#9ccc</color>
 
-    <color name="wordSelectorToken">#CCCCCC</color>
+    <color name="word_selector_token">#CCCCCC</color>
 
     <color name="debugYellow">#f1de0c</color>
     <color name="debugGreen">#32f10c</color>
