--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -2,6 +2,7 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     >
 
     <data>
@@ -11,6 +12,9 @@
         <variable
             name="lesson"
             type="com.diezsiete.lscapp.vo.Lesson" />
+        <variable
+            name="answerMessage"
+            type="com.diezsiete.lscapp.vo.AnswerMessage" />
     </data>
 
     <RelativeLayout
@@ -65,6 +69,10 @@
                 app:practiceEndInvisible="@{lesson.progress}"
                 app:startDelay="@{0}"
                 />
+
+            <include layout="@layout/practice_answer_message"
+                bind:answerMessage="@{answerMessage}"
+                bind:viewmodel="@{viewmodel}" />
 
         </FrameLayout>
 
