--- a/app/src/main/res/layout/practice_show_sign.xml
+++ b/app/src/main/res/layout/practice_show_sign.xml
@@ -28,7 +28,9 @@
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 app:controller_layout_id="@layout/signplayer_custom_playback_control"
-                app:use_controller="true" />
+                app:use_controller="true"
+                app:practiceVideo="@{practice.getVideo()}"
+                />
         </FrameLayout>
 
         <android.support.v7.widget.CardView
