--- a/app/src/main/res/layout/practice_translate_video.xml
+++ b/app/src/main/res/layout/practice_translate_video.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="practice"
+            type="com.diezsiete.lscapp.vo.PracticeWithData" />
+    </data>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,22 +22,18 @@
 
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/video_view"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:controller_layout_id="@layout/exoplayer_custom_playback_control"
-            app:use_controller="false">
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            app:controller_layout_id="@layout/signplayer_custom_playback_control"
+            app:use_controller="true"
+            app:practiceVideo="@{practice.getVideo()}"
+            />
 
-        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
-
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <com.diezsiete.lscapp.ui.widget.wordselector.WordSelectorView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:id="@+id/word_selector"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/word_selector_root"
+            />
 
 
     </LinearLayout>
