--- a/app/src/main/res/layout/practice_which_one_videos.xml
+++ b/app/src/main/res/layout/practice_which_one_videos.xml
@@ -2,9 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <GridView
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/grid_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:numColumns="2"/>
+        android:padding="@dimen/spacing_nano"
+        android:clipToPadding="false"
+        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        android:transitionGroup="false"
+        app:spanCount="2" tools:ignore="UnusedAttribute"
+        />
 </layout>
