Implementada arquitectura mvvm con todas las practicas

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="spacing_nano">2dp</dimen>
+    <dimen name="spacing_single">8dp</dimen>
     <dimen name="spacing_double">16dp</dimen>
 
     <dimen name="elevation_header">4dp</dimen>
