--- a/app/src/main/res/layout/image_grid_resizable_grid_item.xml
+++ b/app/src/main/res/layout/image_grid_resizable_grid_item.xml
@@ -2,13 +2,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="2dp">
+    android:padding="@dimen/spacing_single"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:background="@drawable/selector_button"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.diezsiete.lscapp.widget.DynamicHeightImageView
+        <com.diezsiete.lscapp.ui.widget.DynamicHeightImageView
             android:id="@+id/dynamic_height_image_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
