--- a/app/src/main/res/layout/practice_discover_image.xml
+++ b/app/src/main/res/layout/practice_discover_image.xml
@@ -1,22 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+        <variable
+            name="discoverImageView"
+            type="com.diezsiete.lscapp.ui.practice.DiscoverImageView" />
+        <variable
+            name="textId"
+            type="int" />
+        <variable
+            name="position"
+            type="int" />
         <variable
             name="practice"
             type="com.diezsiete.lscapp.vo.PracticeWithData" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/grid_view"
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+            android:id="@+id/practice_view_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            >
+
+            <TextView
+                android:id="@+id/question_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="2.5dp"
-                android:paddingRight="2.5dp"
-                android:paddingTop="10dp"
+                android:layout_height="wrap_content"
+                android:elevation="@dimen/elevation_header"
+                android:gravity="center"
+                android:paddingTop="0dp"
+                android:paddingRight="@dimen/spacing_double"
+                android:paddingBottom="@dimen/spacing_double"
+                android:paddingLeft="@dimen/spacing_double"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="?android:attr/textColorPrimary"
+                tools:ignore="Overdraw,UnusedAttribute,PrivateResource"
+                android:text="@{context.getString(textId)}"
                 />
 
-    </android.support.constraint.ConstraintLayout>
+            <AdapterViewFlipper
+                android:id="@+id/discover_image_flipper"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="0dp"
+                />
+
+        </LinearLayout>
+
+
+        <ImageButton
+            android:id="@+id/submitAnswer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_forward_white"
+            android:layout_alignParentBottom="true"
+            android:padding="@dimen/spacing_double"
+            android:background="@color/button_submit_answer_bg"
+            android:onClick="@{() -> discoverImageView.onClickSubmitAnswer()}"
+            app:buttonEnable="@{position == 0 ? true : practice.enableSave}"
+            />
+
+
+    </RelativeLayout>
 </layout>
