--- a/app/src/main/res/layout/fragment_level.xml
+++ b/app/src/main/res/layout/fragment_level.xml
@@ -11,24 +11,23 @@
         android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/level_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{level.name}"
-            />
-        <ImageView
-            android:id="@+id/level_image"
-            android:layout_width="@dimen/level_selection_image_size"
-            android:layout_height="@dimen/level_selection_image_size"
-            android:layout_gravity="center"
-            app:imageUrl="@{level.image}" />
+
 
         <TextView
+            android:id="@+id/lessons_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/lessons"
-            />
+            style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:gravity="center"
+            android:background="@color/lesson_title_background"
+            android:textColor="@android:color/white"
+            android:padding="@dimen/spacing_simple"
+            android:layout_marginStart="@dimen/spacing_simple"
+            android:layout_marginEnd="@dimen/spacing_simple"
+            android:layout_marginTop="@dimen/spacing_single"
+            android:elevation="2dp"
+             />
 
         <android.support.v7.widget.RecyclerView
             xmlns:android="http://schemas.android.com/apk/res/android"
