--- a/app/src/main/res/layout/item_which_one_video_option.xml
+++ b/app/src/main/res/layout/item_which_one_video_option.xml
@@ -12,10 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:minHeight="48dp"
         android:text="@{option}"
+        android:textColor="@android:color/white"
         android:clickable="true"
         android:focusable="true"
-        android:focusableInTouchMode="true"/>
+        android:focusableInTouchMode="true"
+        android:layout_marginStart="@dimen/spacing_double"
+        android:layout_marginEnd="@dimen/spacing_double"
+        android:layout_marginTop="@dimen/spacing_simple"
+        android:padding="@dimen/spacing_single"
+        />
 
 </layout>
