--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -3,35 +3,69 @@
     <data>
         <variable name="lesson" type="com.diezsiete.lscapp.vo.Lesson"/>
     </data>
-    <android.support.v7.widget.CardView
+    <com.github.captain_miao.optroundcardview.OptRoundCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="2dp"
+        android:id="@+id/level_item"
         app:cardElevation="2dp"
-        android:layout_marginBottom="2dp">
+        app:optRoundCardCornerRadius="42dp"
+        app:optRoundCardLeftTopCorner="false"
+        app:optRoundCardRightTopCorner="false"
+        app:optRoundCardBottomEdges="false"
+        android:layout_marginLeft="@dimen/spacing_simple"
+        android:layout_marginRight="@dimen/spacing_simple"
+        android:layout_marginBottom="@dimen/spacing_double"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <android.support.v7.widget.ContentFrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@{lesson.color}"
+                android:padding="@dimen/spacing_single"
+                >
 
-            <ImageView
-                android:id="@+id/lesson_image"
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/level_image"
+                        android:layout_width="@dimen/level_selection_image_size"
+                        android:layout_height="@dimen/level_selection_image_size"
+                        android:layout_gravity="right"
+                        android:adjustViewBounds="false"
+                        android:cropToPadding="false"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@android:drawable/btn_star"
+                        app:imageUrl="@{lesson.image}"
+                        android:contentDescription="@string/level_image"
+                        />
+                    <TextView
+                        android:id="@+id/level_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|center"
+                        android:padding="1dp"
+                        android:textSize="20sp"
+                        android:text="@{lesson.name}"
+                        android:textColor="@android:color/white"/>
+                </FrameLayout>
+
+            </android.support.v7.widget.ContentFrameLayout>
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_goto_lesson"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:imageUrl="@{lesson.image}"
-                />
-
-            <TextView
-                android:id="@+id/lesson_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:textSize="20sp"
-                android:text="@{lesson.name}"
+                android:text="@string/practice"
+                android:textAllCaps="false"
+                android:background="@drawable/button_style"
+                android:textColor="@android:color/white"
+                android:layout_margin="@dimen/spacing_single"
                 />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </com.github.captain_miao.optroundcardview.OptRoundCardView>
 </layout>
