--- a/app/src/main/res/layout/practice_answer_message.xml
+++ b/app/src/main/res/layout/practice_answer_message.xml
@@ -11,11 +11,14 @@
         <variable
             name="viewmodel"
             type="com.diezsiete.lscapp.ui.practice.PracticeViewModel" />
+        <variable
+            name="lesson"
+            type="com.diezsiete.lscapp.vo.Lesson" />
     </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPopUpBackgroud"
+        android:background="@color/practice_answer_back"
         android:visibility="@{answerMessage != null ? View.VISIBLE : View.INVISIBLE}"
         >
 
@@ -23,36 +26,40 @@
             android:id="@+id/show_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/button_submit_answer_bg"
-            android:onClick="@{() -> viewmodel.setShowNext()}"
-            android:padding="@dimen/spacing_double"
             android:src="@drawable/ic_arrow_forward_white"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:layout_alignParentBottom="true"
+            android:padding="@dimen/spacing_double"
+            android:background="@drawable/button_style"
+            android:backgroundTint="@{lesson.color}"
+            android:onClick="@{() -> viewmodel.setShowNext()}"
+            android:layout_margin="@dimen/spacing_single"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="32dp"
-            android:background="@{answerMessage.status == AnswerMessage.SUCCESS ? @android:color/holo_green_light : @android:color/holo_red_light}"
+            android:layout_marginStart="@dimen/spacing_single"
+            android:layout_marginTop="@dimen/spacing_quadruple"
+            android:layout_marginEnd="@dimen/spacing_single"
+            android:background="@{answerMessage.status == AnswerMessage.SUCCESS ? @drawable/answer_success_style : @drawable/answer_danger_style}"
             android:orientation="vertical"
             android:padding="@dimen/spacing_double"
-
-            app:layout_constraintBottom_toTopOf="@+id/show_next"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:elevation="4dp"
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{answerMessage.status == AnswerMessage.SUCCESS ? @string/practice_success_message : @string/practice_warning_message}" />
-
+            <!--
             <TextView
                 android:id="@+id/answer_message_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text='@{"Respuesta : " + answerMessage.answer}' />
+            -->
         </LinearLayout>
 
 
