--- a/app/src/main/res/layout/practice_show_sign.xml
+++ b/app/src/main/res/layout/practice_show_sign.xml
@@ -33,23 +33,21 @@
                 />
         </FrameLayout>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/category_item"
+
+        <TextView
+            android:id="@+id/tv_show_sign"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/spacing_double"
+            android:layout_marginEnd="@dimen/spacing_double"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="2dp">
-            <TextView
-                android:id="@+id/tv_show_sign"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:padding="20dp"
-                android:text="@{practice.word}"
-                />
-        </android.support.v7.widget.CardView>
+            android:gravity="center"
+            android:textSize="20sp"
+            android:padding="20dp"
+            android:text="@{practice.word}"
+            android:background="@color/show_sign_word"
+            />
+
 
     </LinearLayout>
 </layout>
