--- a/app/src/main/res/layout/practice_take_sign.xml
+++ b/app/src/main/res/layout/practice_take_sign.xml
@@ -5,6 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
+    <data>
+        <import type="android.view.View" />
+        <variable
+            name="practice"
+            type="com.diezsiete.lscapp.vo.PracticeWithData" />
+    </data>
 
 
     <RelativeLayout
@@ -15,68 +21,80 @@
             android:id="@+id/practice_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:clipToPadding="false"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="0dp"
-            tools:context="com.example.android.emojify.MainActivity"
-            android:layout_centerInParent="true"
-            android:layout_alignParentTop="true"
-            android:clipToPadding="false"
-            >
+            android:paddingTop="@dimen/spacing_single"
+            tools:context="com.example.android.emojify.MainActivity">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerInParent="true"
+
+                android:layout_marginTop="20dp"
                 app:cardCornerRadius="2dp"
                 app:cardElevation="6dp"
+                app:contentPadding="0dp">
 
-                app:contentPadding="0dp"
-                android:layout_centerInParent="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="20dp"
-                >
                 <TextureView
                     android:id="@+id/texture"
                     android:layout_width="300dp"
-                    android:layout_height="300dp"
-                    />
-            </android.support.v7.widget.CardView>
+                    android:layout_height="300dp" />
 
-            <android.support.v7.widget.CardView
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/card_view"
-                android:layout_marginTop="27dp"
-                android:layout_centerInParent="true"
-                app:cardCornerRadius="2dp"
-                app:cardElevation="4dp"
-                >
+                <ProgressBar
+                    android:id="@+id/pb_takesign"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:visibility="@{practice.answerUser != null &amp;&amp; practice.answerUser == 2 ? View.VISIBLE : View.GONE}" />
+
 
                 <Button
                     android:id="@+id/btn_takepicture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:padding="20dp"
-                    android:textSize="20sp"
-                    android:text="@string/practice_take_picture_button" />
+                    android:layout_gravity="bottom|center"
+                    android:padding="@dimen/spacing_double"
+                    android:text="@{practice.answerUser == null ? @string/practice_take_picture_button : @string/practice_take_sign_analizing}"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/white"
+                    android:textAllCaps="false"
+                    android:background="@drawable/button_style"
+                    android:enabled="@{practice.answerUser == null}"
+                    android:layout_marginStart="@dimen/spacing_double"
+                    android:layout_marginEnd="@dimen/spacing_double"
+                    android:layout_marginBottom="@dimen/spacing_single"
+                    android:visibility="@{practice.answerUser == null || practice.answerUser == 2 ? View.VISIBLE : View.INVISIBLE}"
+                    />
 
             </android.support.v7.widget.CardView>
 
+
+
+
+
+
+            <!--
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/dictionary_clear_button"
+                android:id="@+id/btn_camera_rotate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:elevation="8dp"
                 android:src="@drawable/ic_switch_camera"
                 app:backgroundTint="@android:color/white"
-                app:fabSize="mini"
-                android:elevation="8dp"
-                />
+                app:fabSize="mini" />
+                -->
         </RelativeLayout>
     </RelativeLayout>
 </layout>
