--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,13 @@
     <color name="white">#ffffff</color>
     <color name="black_effective">#2a2a2a</color>
 
+    <color name="lesson_title_background">#00799D</color>
+
     <!-- Practice -->
     <color name="button_submit_answer_bg">@color/colorPrimaryDark</color>
+    <color name="practice_question">#EBEBEB</color>
+    <color name="show_sign_word">#EBEBEB</color>
+    <color name="practice_item_bg">#afafaf</color>
+    <color name="practice_item_sel">#00AB81</color>
+    <color name="practice_answer_back">#0f000000</color>
 </resources>
